# Azure-Kinect-Samples

./: .gitattributes  .gitignore  .gitmodules  README.md  azure-pipelines.yml
body-tracking-samples/: README.md
body-tracking-samples/camera_space_transform_sample/: CMakeLists.txt  README.md  camera_space_transform_sample.sln  camera_space_transform_sample.vcxproj  camera_space_transform_sample.vcxproj.filters  main.cpp
body-tracking-samples/csharp_3d_viewer/: BodyColors.cs  Csharp_3d_viewer.csproj  CylinderRenderer.cs  JointConnections.cs  PointCloud.cs  PointCloudRenderer.cs  Program.cs  README.md  Renderer.cs  Shaders.cs  SphereRenderer.cs  TriangleRenderer.cs  VertexRenderer.cs  VisualizerData.cs
body-tracking-samples/floor_detector_sample/: CMakeLists.txt  FloorDetector.cpp  FloorDetector.h  PointCloudGenerator.cpp  PointCloudGenerator.h  README.md  SampleMathTypes.h  floor_detector_sample.sln  floor_detector_sample.vcxproj  floor_detector_sample.vcxproj.filters  main.cpp  packages.config
body-tracking-samples/jump_analysis_sample/: CMakeLists.txt  DigitalSignalProcessing.cpp  DigitalSignalProcessing.h  HandRaisedDetector.cpp  HandRaisedDetector.h  JumpEvaluator.cpp  JumpEvaluator.h  README.md  jump_analysis_sample.sln  jump_analysis_sample.vcxproj  jump_analysis_sample.vcxproj.filters  main.cpp
body-tracking-samples/offline_processor/: CMakeLists.txt  README.md  main.cpp  offline_processor.sln  offline_processor.vcxproj  packages.config
body-tracking-samples/sample_helper_includes/: BodyTrackingHelpers.h  README.md  Utilities.h
body-tracking-samples/simple_3d_viewer/: Addition.cpp  Addition.h  AngleCalculator.cpp  AngleCalculator.h  CMakeLists.txt  README.md  SaveCSV.cpp  SaveCSV.h  build.sh  main.cpp  simple_3d_viewer.sln  simple_3d_viewer.vcxproj  simple_3d_viewer.vcxproj.filters
body-tracking-samples/simple_cpp_sample/: README.md  main.cpp  simple_cpp_sample.sln  simple_cpp_sample.vcxproj  simple_cpp_sample.vcxproj.filters
body-tracking-samples/simple_sample/: README.md  main.c  packages.config  simple_sample.sln  simple_sample.vcxproj  simple_sample.vcxproj.filters
(+33 files in other folders)
